--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - run: npm ci
       - run: npm run validate:changelog
       - name: Check for Motoko file changes
@@ -42,6 +43,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - run: npm ci
       - run: npm run validate:version
 
@@ -57,6 +59,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - run: npm ci
       - run: npm run validate:api
       - name: Check for API changes
@@ -83,6 +86,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - run: npm ci
       - run: npm run format:check
 
@@ -105,6 +109,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+          cache: 'npm'
       - run: npm ci
       - run: npx mops toolchain init
       - run: npm test
