--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+      - name: Cache mops packages
+        uses: actions/cache@v4
+        with:
+          key: mops-packages-${{ hashFiles('mops.toml') }}
+          restore-keys: |
+            mops-packages-${{ hashFiles('mops.toml') }}
+            mops-packages-
+          path: |
+            ~/.cache/mops
       - run: npm ci
       - run: npm run validate:changelog
       - name: Check for Motoko file changes
@@ -44,6 +53,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+      - name: Cache mops packages
+        uses: actions/cache@v4
+        with:
+          key: mops-packages-${{ hashFiles('mops.toml') }}
+          restore-keys: |
+            mops-packages-${{ hashFiles('mops.toml') }}
+            mops-packages-
+          path: |
+            ~/.cache/mops
       - run: npm ci
       - run: npm run validate:version
 
@@ -60,6 +78,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+      - name: Cache mops packages
+        uses: actions/cache@v4
+        with:
+          key: mops-packages-${{ hashFiles('mops.toml') }}
+          restore-keys: |
+            mops-packages-${{ hashFiles('mops.toml') }}
+            mops-packages-
+          path: |
+            ~/.cache/mops
       - run: npm ci
       - run: npm run validate:api
       - name: Check for API changes
@@ -87,6 +114,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+      - name: Cache mops packages
+        uses: actions/cache@v4
+        with:
+          key: mops-packages-${{ hashFiles('mops.toml') }}
+          restore-keys: |
+            mops-packages-${{ hashFiles('mops.toml') }}
+            mops-packages-
+          path: |
+            ~/.cache/mops
       - run: npm ci
       - run: npm run format:check
 
