--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -147,6 +147,15 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+      - name: Cache mops packages
+        uses: actions/cache@v4
+        with:
+          key: mops-packages-${{ hashFiles('mops.toml') }}
+          restore-keys: |
+            mops-packages-${{ hashFiles('mops.toml') }}
+            mops-packages-
+          path: |
+            ~/.cache/mops
       - run: npm ci
       - run: npx mops toolchain init
       - run: npm test
